Fixed text in alt of about-section images. Removed backface-visibility from scss file.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -97,7 +97,6 @@ $secondary-color: #7d97ad;
         width: 100%;
         height: 8.625rem;
         transition: all 0.2s;
-        backface-visibility: hidden;
     }
 
     .card:hover {
